show details recipe

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,13 +1,14 @@
 <div class="row">
 
     <div class="col-xs-12">
-      <img src="" alt="" class="img-responsive">
+      <img src="{{selectedRecipElm.urlImage}}" alt="" class="img-responsive"
+      style="inline-size: 25%">
   
     </div>
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <h1>Name</h1>
+      <h1>{{selectedRecipElm.name}}</h1>
     </div>
   </div>
   <div class="row">
@@ -27,7 +28,7 @@
   </div>
     <div class="row">
       <div class="col-xs-12">
-  description
+          {{selectedRecipElm.description}}
       </div>
     </div>
     <div class="row">
