add ingredents to shopping List

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,39 +1,39 @@
 <div class="row">
 
-    <div class="col-xs-12">
-      <img src="{{selectedRecipElm.urlImage}}" alt="" class="img-responsive"
-      style="inline-size: 25%">
-  
+  <div class="col-xs-12">
+    <img *ngIf="selectedRecipElm" src="{{selectedRecipElm.urlImage}}" alt="" class="img-responsive" style="inline-size: 25%">
+
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12" *ngIf="selectedRecipElm">
+    <h1>{{selectedRecipElm.name}}</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+
+    <div class="btn-group" appDropdown>
+      <button type="button" class="btn btn-primary dropdown-toggle">
+        Manage Recipe <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li> <a href="#" (click)="onaAdToShoppingList()" >To Shopping list</a></li>
+        <li> <a href="#">Edit Recipe</a></li>
+        <li> <a href="#">Delete Recipe</a></li>
+      </ul>
     </div>
   </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <h1>{{selectedRecipElm.name}}</h1>
-    </div>
+</div>
+<div class="row" *ngIf="selectedRecipElm">
+  <div class="col-xs-12">
+    {{selectedRecipElm.description}}
   </div>
-  <div class="row">
-    <div class="col-xs-12">
-  
-      <div class="btn-group" appDropdown>
-        <button type="button" class="btn btn-primary dropdown-toggle">
-          Manage Recipe <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-          <li> <a href="#">To Shopping list</a></li>
-          <li> <a href="#">Edit Recipe</a></li>
-          <li> <a href="#">Delete Recipe</a></li>
-        </ul>
-      </div>
-    </div>
+</div>
+<div class="row">
+  <div class="col-xs-12" *ngIf="selectedRecipElm">
+    <ul  *ngFor="let ingredient of selectedRecipElm.ingredients">
+      <ul>{{ingredient.name}} {{ingredient.amount}}</ul>
+    </ul>
   </div>
-    <div class="row">
-      <div class="col-xs-12">
-          {{selectedRecipElm.description}}
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12">
-        Ingredient
-      </div>
-    </div>
-  
+</div>
