--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -5,8 +5,7 @@
     </div>
 
     <div class="col-md-7">
-        <app-recipe-detail  
-        [selectedRecipElm]="selectedRecipe" >
+        <app-recipe-detail>
         </app-recipe-detail>
     </div>
 
