--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<app-header ></app-header>
+<app-header></app-header>
 <div class="container">
-<div class="row">
-<div class="col-md-12">
-    <app-recipes *ngIf="isReciveShowed"></app-recipes>
-    <app-shopping-list  *ngIf="isShoppingShowed"></app-shopping-list>
-</div>
-</div>
+    <div class="row">
+        <div class="col-md-12">
+            <router-outlet>
+            </router-outlet>
+
+        </div>
+    </div>
 </div>
