--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,14 +7,14 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li> <a href="#" (click)=" showRecipe()">Recipes</a></li>
-        <li> <a href="#" (click)="showShopping()">Shopping List</a></li>
+        <li> <a href="#" [routerLink]="['recipes']">Recipes</a></li>
+        <li> <a href="#" [routerLink]="['shoppings']"> Shopping List</a></li>
       </ul>
 
 
       <div class="nav navbar-nav navbar-right ">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle  " role="button" >Manage <span class="caret"></span></a>
+          <a href="#" class="dropdown-tgle  " role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu ">
             <li> <a href="#">Save Data</a></li>
             <li> <a href="#">Fetch Dat</a></li>
