add child route

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,10 +7,7 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item *ngFor="let item of recipes" [recipe]="item"
-       (recipeDetailEvent)="holdRecipe(item)"
-        ></app-recipe-item>
+        <app-recipe-item *ngFor="let item of recipes; let i= index " [recipe]="item" [index]="i" (recipeDetailEvent)="holdRecipe($event)"></app-recipe-item>
 
     </div>
-
 </div>
