--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,23 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
+      <a style="cursor: pointer;" class="navbar-brand">Recipe Book</a>
 
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li> <a href="#" [routerLink]="['recipes']">Recipes</a></li>
-        <li> <a href="#" [routerLink]="['shoppings']"> Shopping List</a></li>
+        <li routerLinkActive="active"> <a [routerLink]="['recipes']">Recipes</a></li>
+        <li routerLinkActive="active"> <a  [routerLink]="['shoppings']"> Shopping List</a></li>
       </ul>
 
 
       <div class="nav navbar-nav navbar-right ">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-tgle  " role="button">Manage <span class="caret"></span></a>
+          <a style="cursor: pointer;" class="dropdown-tgle  " role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu ">
-            <li> <a href="#">Save Data</a></li>
-            <li> <a href="#">Fetch Dat</a></li>
+            <li> <a style="cursor: pointer;">Save Data</a></li>
+            <li> <a  style="cursor: pointer;">Fetch Dat</a></li>
 
           </ul>
         </li>
