--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,9 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item *ngFor="let item of recipes; let i= index " [recipe]="item" [index]="i" (recipeDetailEvent)="holdRecipe($event)"></app-recipe-item>
+        <app-recipe-item *ngFor="let item of recipes; let i= index" [recipe]="item" [index]="i">
+
+        </app-recipe-item>
 
     </div>
 </div>
