--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -19,7 +19,7 @@
       </button>
       <ul class="dropdown-menu">
         <li> <a  style="cursor: pointer;" (click)="onaAdToShoppingList()" >To Shopping list</a></li>
-        <li> <a  style="cursor: pointer;">Edit Recipe</a></li>
+        <li> <a  style="cursor: pointer;" [routerLink]="['edit',{recipe:selectedRecipElm}]">Edit Recipe</a></li>
         <li> <a  style="cursor: pointer;">Delete Recipe</a></li>
       </ul>
     </div>
