--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,14 +1,13 @@
 <div class="row">
 
     <div class="col-xs-12">
-        <button class="btn btn-success">new Recipe</button>
+        <button class="btn btn-success" (click)="createRecipe()">new Recipe</button>
     </div>
 </div>
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item *ngFor="let item of recipes; let i= index" [recipe]="item" [index]="i">
-
+        <app-recipe-item *ngFor="let item of recipes; let i= index" [recipe]="item" [index]="i" >
         </app-recipe-item>
 
     </div>
